added filtering for user search
